<resources>
    <string name="app_name">Explicit Intent</string>
    <string name="please_enter_your_name">Please enter your name</string>
    <string name="result_from_activity_3">Result from Activity 3 will be displayed here</string>
    <string name="welcome_to_activity_2">Welcome to Activity 2</string>
    <string name="activity_2">Activity 2</string>
    <string name="activity_3">Activity 3</string>
    <string name="please_enter_your_surname">Please enter your surname</string>
    <string name="submit">Submit</string>
    <string name="Please_enter_all_fields">Please enter all fields!</string>
    <string name="cancel">Cancel</string>
    <string name="implicit_intent">Implicit Intent</string>
    <string name="call">Call</string>
    <string name="call_friend">Call Friend</string>
    <string name="open_web">Open WEB</string>
    <string name="open_MAP">Open MAP</string>
    <string name="explicit_intent">Explicit Intent</string>
    <string name="end">End</string>
</resources>