<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <EditText
        android:id="@+id/main_et_name"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:gravity="center_horizontal|center_vertical"
        android:hint="@string/please_enter_your_name"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/main_btn_Activity2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"

        android:textAllCaps="false"
        android:textSize="16sp"
        android:background="@color/design_default_color_primary"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/activity_2"
        android:textColor="#FFFF" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/main_btn_Activity3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"

        android:textAllCaps="false"
        android:textSize="16sp"

        android:background="@color/design_default_color_primary"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/activity_3"
        android:textColor="#FFFF" />

    <TextView
        android:id="@+id/main_tv_resultFromActivity3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:gravity="center_horizontal|center_vertical"
        android:hint="@string/result_from_activity_3"
        android:textColor="@color/purple_700" />

</LinearLayout>