<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activity3">

    <EditText
        android:id="@+id/activity3_et_surname"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"

        android:gravity="center_horizontal|center_vertical"

        android:inputType="textPersonName"
        android:autofillHints="surname"
        android:hint="@string/please_enter_your_surname" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/activity3_btn_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"

        android:background="@color/design_default_color_primary"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/submit"
        android:textAllCaps="false"
        android:textColor="#FFFF"
        android:textSize="16sp" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/activity3_btn_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"

        android:background="@color/design_default_color_primary"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/cancel"
        android:textAllCaps="false"
        android:textColor="#FFFF"
        android:textSize="16sp" />

</LinearLayout>